# Webots-Controller

./: .gitignore  CMakeLists.txt  PLAYER_1_0.py  README.md  head_control.cpp  inertial.hpp  left_arm.hpp  left_leg.hpp  main.cpp  main.hpp  nao_demo.cpp  params.hpp  right_arm.hpp  right_leg.hpp  sdl.hpp  stat_machine_striker.py
.github/workflows/: test_build.yml
